@@ -1,3 +1,4 @@
+Fixed: The right wall is draggable in the forces and motion sim
 # 1.03.69 (42659) Jul 26, 2010
 Fixed: In chart control panel, forces should be named FApplied, FFriction, FGravity ||, FWall, FSum ||
 Fixed: only the net force series should be visible by default on charts
